fixed issue with margin while viewing on mobile devices

--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body{
-    font-family: Helvetica;
+    font-family: Arial;
 }
 
 .heading{
@@ -14,6 +14,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    text-align: center;
 }
 
 .name{
@@ -30,7 +31,7 @@ body{
     background-color: #154c79;
     border: solid white 1px;
     border-radius: 15%;
-    height: 10px;
+    height: 5px;
     width: 100%;
 }
 
@@ -52,7 +53,7 @@ body{
 .mainBody{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .bodyContainer{
@@ -129,6 +130,14 @@ a:hover{
 }
 
 @media screen and (max-width: 767px) {
+    body{
+        margin: 0 auto;
+    }
+
+    .description{
+        text-align: justify-all;
+    }
+
     .mainBody{
         flex-direction: column;
         justify-content: space-evenly;
@@ -150,7 +159,7 @@ a:hover{
     .contact{
         flex-wrap: wrap;
     }
-    .contact > *{
+    .contact > * {
         margin-bottom: 5px;
     }
 }
